# open-i

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  simple_video_cycle.py  test.py
@notebooks/: openAI.ipynb  visualTest.ipynb  voicePipe.ipynb
archive/src/: my_workflow.py
backend/: VDB_Setup.ipynb  package-lock.json  requirements.txt  vdb_setup.py
backend/src/pages/: ConsolePage.scss  ConsolePage.tsx
backend/src/utils/: conversation_config.js
frontend/: package-lock.json  package.json
frontend/src/: App.vue  main.js
frontend/src/components/: AITranscript.vue  History.vue  TypewriterText.vue  UserTranscript.vue  VideoStream.vue  WebcamOverlay.vue  WebcamStream.vue
frontend/src/data/: dummyMessages.js
frontend/src/services/: boundingBoxAnalyzer.js  frameAnalyzer.js  frameService.js  voiceService.js
frontend/src/stores/: boundingBoxStore.js  transcriptStore.js
src/: my_workflow.py
